--- a/index.html
+++ b/index.html
@@ -458,16 +458,21 @@
         </div>
         <div class="div-subscribe">
           <p class="subscribe-text">Subscribe</p>
-          <form name="subscribe" autocomplete="off" novalidate>
-            <label>
+          <form
+            class="form-subscribe"
+            name="subscribe"
+            autocomplete="off"
+            novalidate
+          >
+            <label class="subscribe-label">
               <input
                 class="subscribe-input"
                 type="email"
                 placeholder="E-mail"
               />
             </label>
-            <button type="button">Subscribe</button
-            ><svg class="24" width="24" height="">
+            <button class="button-subscribe" type="submit">Subscribe</button
+            ><svg class="plane" width="24" height="24">
               <use href="./images/icons.svg#icon-plane"></use>
             </svg>
           </form>
@@ -491,76 +496,84 @@
         <p class="modal-p">Leave your contacts and we will call you back</p>
         <form class="modal-form" name="feedback-form" autocomplete="on">
           <div class="modal-form-field">
-            <label class="modal-form-label" for="user_name">Name</label>
+            <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-box">
               <input
                 class="modal-form-input"
                 type="text"
-                name="user_name"
-                id="user_name"
+                name="user-name"
+                id="user-name"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-form-label" for="user_phone">Phone</label>
+            <label class="modal-form-label" for="user-phone">Phone</label>
             <div class="modal-form-box">
               <input
                 class="modal-form-input"
                 type="tel"
-                name="user_email"
-                id="user_phone"
+                name="user-phone"
+                id="user-phone"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-form-label" for="user_email">Email</label>
+            <label class="modal-form-label" for="user-email">Email</label>
             <div class="modal-form-box">
               <input
                 class="modal-form-input"
                 type="email"
-                name="user_phone"
-                id="user_email"
+                name="user-email"
+                id="user-email"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
-            <label for="user_comment">Comment</label>
+          <div class="modal-form-comment">
+            <label class="modal-form-lable" for="user-comment">Comment</label>
             <textarea
               class="modal-form-textarea"
-              name="user_messafe"
-              id="user_comment"
+              name="user-comment"
+              id="user-comment"
               rows="7"
               placeholder="Text input"
             ></textarea>
           </div>
 
-          <label class="modal-form-checkbox">
-            <input type="input-checkbox" />
-            <span class="span-checkbox">
-              <svg class="checkbox-icon" width="" height="">
-                <use href=""></use>
-              </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a
-              class="privacy-policy-link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              Privacy Policy
-            </a>
-          </label>
-          <button type="submit">Send</button>
+          <div class="modal-form-checkbox">
+            <input
+              class="visually-hidden input-checkbox"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label for="user-privacy" class="modal-form-checkbox-label">
+              <span class="span-checkbox">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a
+                class="privacy-policy-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Privacy Policy
+              </a>
+            </label>
+          </div>
+          <button class="button-checkbox" type="submit">Send</button>
         </form>
       </div>
     </div>
