--- a/index.html
+++ b/index.html
@@ -466,15 +466,17 @@
           >
             <label class="subscribe-label">
               <input
+                name="form-footer"
                 class="subscribe-input"
                 type="email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="button-subscribe" type="submit">Subscribe</button
-            ><svg class="plane" width="24" height="24">
-              <use href="./images/icons.svg#icon-plane"></use>
-            </svg>
+            <button class="button-subscribe" type="submit">
+              Subscribe<svg class="plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
