--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             </div>
           </div>
           <div class="modal-form-comment">
-            <label class="modal-form-lable" for="user-comment">Comment</label>
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-textarea"
               name="user-comment"
